--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
 		<meta charset="UTF-8">
 		<meta name="Keywords" content="">
 		<meta name="Description" content="">
-		<title>3D旋转照片墙</title>
+		<title>老婆照片墙</title>
 <!--		<embed src="Charlie Puth - Look At Me Now.mp3" hidden="true" autostart="true" loop="true">-->
 	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
             	src="Charlie Puth - Look At Me Now.mp3">     		
 	</audio>
 		<!-- 如果我有天醒来 -->
 		<!-- 层叠样式表 -->
-		<style type="text/css">
-     audio{
-             display: none;
-         }
-</style>
 		<style type="text/css">
 			/* 去掉默认效果 */
 			
